之前天气接口没有认证，重新认证，定位接口出现appkey权限问题，修改了定位为重庆

--- a/HaoChiBao/app/src/main/res/layout/activity_homepage.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_homepage.xml
@@ -8,19 +8,18 @@
     <!--顶部导航栏-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:background="@color/mainRed"
         android:orientation="horizontal"
         android:focusableInTouchMode="true"
+        android:gravity="center_vertical"
         >
 
         <TextView
             android:id="@+id/homepage_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="12dp"
-            android:layout_marginTop="16dp"
             android:drawablePadding="5dp"
             android:drawableRight="@mipmap/home_sw_resize"
             android:text="@string/cq"
@@ -41,9 +40,7 @@
             android:id="@+id/homepage_weather"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:layout_marginRight="12dp"
-            android:layout_marginTop="16dp"
             android:text="@string/weather"
             android:layout_marginLeft="20dp"
             android:textColor="@color/white"
