--- a/HaoChiBao/app/src/main/res/layout/activity_find_lv.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_find_lv.xml
@@ -7,7 +7,8 @@
     <RelativeLayout
         android:id="@+id/home_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
+        android:gravity="center_vertical"
         android:background="@color/mainRed">
         <TextView
             android:id="@+id/location"
